<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#777777"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".vista.InicioMainActivity">

    <TextView
        android:id="@+id/Inicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/consultar_usuario_u_otro"
        android:textIsSelectable="true"
        android:textSize="30dp"
        android:textColor="#000000"
        app:fontFamily="sans-serif-medium"/>

    <RadioGroup
        android:id="@+id/radio_opcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radio_usuario"
            android:layout_width="410dp"
            android:layout_height="40dp"
            android:checked="true"
            android:textSize="20dp"
            android:textColor="#000000"
            android:layout_marginTop="20dp"
            android:text="@string/usuarior" />

        <RadioButton
            android:id="@+id/radio_otro"
            android:layout_width="410dp"
            android:layout_height="40dp"
            android:checked="false"
            android:textColor="#000000"
            android:textSize="20dp"
            android:text="@string/otro"/>

    </RadioGroup>

    <TextView
        android:id="@+id/Sexo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/cual_es_su_sexo"
        android:textIsSelectable="true"
        android:textSize="30dp"
        android:textColor="#000000"
        app:fontFamily="sans-serif-medium"/>

    <RadioGroup
        android:id="@+id/radio_Sexo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

    <RadioButton
        android:id="@+id/radio_hombre"
        android:layout_width="410dp"
        android:layout_height="40dp"
        android:checked="true"
        android:textSize="25sp"
        android:textColor="#000000"
        android:layout_marginTop="20dp"
        android:text="@string/hombre" />

    <RadioButton
        android:id="@+id/radio_mujer"
        android:layout_width="410dp"
        android:layout_height="40dp"
        android:checked="true"
        android:textSize="25sp"
        android:textColor="#000000"
        android:text="Mujer"/>

    </RadioGroup>

        <Button
            android:id="@+id/button_Siguiente"
            android:layout_width="220dp"
            android:layout_height="40dp"
            android:layout_marginTop="40dp"
            android:text="@string/siguiente"
            android:background="#1E2994"
            android:textColor="#FFFBFB"
            android:textSize="10dp"
            android:fontFamily="monospace"
            android:textStyle="bold" />


</LinearLayout>